@@ -5,6 +5,7 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.swing.Icon;
 
@@ -230,7 +231,7 @@ public class PrivateMTGSetProvider extends AbstractCardsProvider {
 
 			var keys = BeanUtils.describe(mc).keySet();
 
-			return keys.stream().map(k -> new QueryAttribute(k, String.class)).sorted().toList();
+			return keys.stream().map(k -> new QueryAttribute(k, String.class)).sorted().collect(Collectors.toList());
 
 		} catch (Exception e) {
 			logger.error(e);
